[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#the profile used for 'cargo build'
[profile.dev]
# panic = "abort" # disable stack unwinding on panic

#the profile used for 'cargo build --release'
[profile.release]
# panic = "abort" # disable stack unwinding on panic

[dependencies]
volatile = "=0.2.6"
spin = "=0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.bootloader]
version = "0.9.27"
features = ["map_physical_memory"]

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-timeout = 300 # (in seconds)
test-success-exit-code = 33 #(0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false
